fix footer spacing for small viewport

--- a/styles/footer.less
+++ b/styles/footer.less
@@ -9,11 +9,18 @@
   }
 }
 
-.column {
+.footer-column {
   padding-left: 70px;
   padding-bottom: 30px;
   float: left;
   width: 33.33%;
+}
+
+@media (max-width: 600px) {
+  .footer-column {
+    float: none;
+    width: 100%;
+  }
 }
 
 /* Clear floats after the columns */
